--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
    <div class="header">
         <div class="header-left">
             <i class="fa-solid fa-bars"></i>
-            <img src="yt_clone_images/youtube-logo.png">
+            <img src="youtube-logo.png">
         </div>
         <div class="header-search">
             <form action="">
@@ -119,11 +119,11 @@
             <!-- Single video starts -->
              <div class="video">
                 <div class="video-thumbnail">
-                    <img src="yt_clone_images/video_thumb_1.jpg">
+                    <img src="video_thumb_1.jpg">
                 </div>
                 <div class="video-details">
                     <div class="author">
-                        <img src="yt_clone_images/profile_5.jpg">
+                        <img src="profile_5.jpg">
                     </div>
                     <div class="title">
                         <h3>
@@ -137,11 +137,11 @@
               <!-- Single video starts -->
              <div class="video">
                 <div class="video-thumbnail">
-                    <img src="yt_clone_images/video_thumb_1.jpg">
+                    <img src="video_thumb_1.jpg">
                 </div>
                 <div class="video-details">
                     <div class="author">
-                        <img src="yt_clone_images/profile_5.jpg">
+                        <img src="profile_5.jpg">
                     </div>
                     <div class="title">
                         <h3>
@@ -155,11 +155,11 @@
               <!-- Single video starts -->
              <div class="video">
                 <div class="video-thumbnail">
-                    <img src="yt_clone_images/video_thumb_1.jpg">
+                    <img src="video_thumb_1.jpg">
                 </div>
                 <div class="video-details">
                     <div class="author">
-                        <img src="yt_clone_images/profile_5.jpg">
+                        <img src="profile_5.jpg">
                     </div>
                     <div class="title">
                         <h3>
@@ -174,12 +174,12 @@
              <div class="video">
                 <div class="video-thumbnail">
 
-                    <img src="yt_clone_images/video_thumb_1.jpg">
+                    <img src="video_thumb_1.jpg">
                 </div>
                 <div class="video-details">
 
                     <div class="author">
-                        <img src="yt_clone_images/profile_5.jpg">
+                        <img src="profile_5.jpg">
                     </div>
                     <div class="title">
                         <h3>
@@ -194,12 +194,12 @@
              <div class="video">
                 <div class="video-thumbnail">
 
-                    <img src="yt_clone_images/video_thumb_1.jpg">
+                    <img src="video_thumb_1.jpg">
                 </div>
                 <div class="video-details">
 
                     <div class="author">
-                        <img src="yt_clone_images/profile_5.jpg">
+                        <img src="profile_5.jpg">
                     </div>
                     <div class="title">
                         <h3>
@@ -214,12 +214,12 @@
              <div class="video">
                 <div class="video-thumbnail">
 
-                    <img src="yt_clone_images/video_thumb_1.jpg">
+                    <img src="video_thumb_1.jpg">
                 </div>
                 <div class="video-details">
 
                     <div class="author">
-                        <img src="yt_clone_images/profile_5.jpg">
+                        <img src="profile_5.jpg">
                     </div>
                     <div class="title">
                         <h3>
@@ -234,12 +234,12 @@
              <div class="video">
                 <div class="video-thumbnail">
 
-                    <img src="yt_clone_images/video_thumb_1.jpg">
+                    <img src="video_thumb_1.jpg">
                 </div>
                 <div class="video-details">
 
                     <div class="author">
-                        <img src="yt_clone_images/profile_5.jpg">
+                        <img src="profile_5.jpg">
                     </div>
                     <div class="title">
                         <h3>
@@ -254,12 +254,12 @@
              <div class="video">
                 <div class="video-thumbnail">
 
-                    <img src="yt_clone_images/video_thumb_1.jpg">
+                    <img src="video_thumb_1.jpg">
                 </div>
                 <div class="video-details">
 
                     <div class="author">
-                        <img src="yt_clone_images/profile_5.jpg">
+                        <img src="profile_5.jpg">
                     </div>
                     <div class="title">
                         <h3>
@@ -274,12 +274,12 @@
              <div class="video">
                 <div class="video-thumbnail">
 
-                    <img src="yt_clone_images/video_thumb_1.jpg">
+                    <img src="video_thumb_1.jpg">
                 </div>
                 <div class="video-details">
 
                     <div class="author">
-                        <img src="yt_clone_images/profile_5.jpg">
+                        <img src="profile_5.jpg">
                     </div>
                     <div class="title">
                         <h3>
@@ -294,12 +294,12 @@
              <div class="video">
                 <div class="video-thumbnail">
 
-                    <img src="yt_clone_images/video_thumb_1.jpg">
+                    <img src="video_thumb_1.jpg">
                 </div>
                 <div class="video-details">
 
                     <div class="author">
-                        <img src="yt_clone_images/profile_5.jpg">
+                        <img src="profile_5.jpg">
                     </div>
                     <div class="title">
                         <h3>
@@ -314,12 +314,12 @@
              <div class="video">
                 <div class="video-thumbnail">
 
-                    <img src="yt_clone_images/video_thumb_1.jpg">
+                    <img src="video_thumb_1.jpg">
                 </div>
                 <div class="video-details">
 
                     <div class="author">
-                        <img src="yt_clone_images/profile_5.jpg">
+                        <img src="profile_5.jpg">
                     </div>
                     <div class="title">
                         <h3>
@@ -334,12 +334,12 @@
              <div class="video">
                 <div class="video-thumbnail">
 
-                    <img src="yt_clone_images/video_thumb_1.jpg">
+                    <img src="video_thumb_1.jpg">
                 </div>
                 <div class="video-details">
 
                     <div class="author">
-                        <img src="yt_clone_images/profile_5.jpg">
+                        <img src="profile_5.jpg">
                     </div>
                     <div class="title">
                         <h3>
@@ -354,12 +354,12 @@
              <div class="video">
                 <div class="video-thumbnail">
 
-                    <img src="yt_clone_images/video_thumb_1.jpg">
+                    <img src="video_thumb_1.jpg">
                 </div>
                 <div class="video-details">
 
                     <div class="author">
-                        <img src="yt_clone_images/profile_5.jpg">
+                        <img src="profile_5.jpg">
                     </div>
                     <div class="title">
                         <h3>
@@ -374,12 +374,12 @@
              <div class="video">
                 <div class="video-thumbnail">
 
-                    <img src="yt_clone_images/video_thumb_1.jpg">
+                    <img src="video_thumb_1.jpg">
                 </div>
                 <div class="video-details">
 
                     <div class="author">
-                        <img src="yt_clone_images/profile_5.jpg">
+                        <img src="profile_5.jpg">
                     </div>
                     <div class="title">
                         <h3>
@@ -394,12 +394,12 @@
              <div class="video">
                 <div class="video-thumbnail">
 
-                    <img src="yt_clone_images/video_thumb_1.jpg">
+                    <img src="video_thumb_1.jpg">
                 </div>
                 <div class="video-details">
 
                     <div class="author">
-                        <img src="yt_clone_images/profile_5.jpg">
+                        <img src="profile_5.jpg">
                     </div>
                     <div class="title">
                         <h3>
@@ -414,12 +414,12 @@
              <div class="video">
                 <div class="video-thumbnail">
 
-                    <img src="yt_clone_images/video_thumb_1.jpg">
+                    <img src="video_thumb_1.jpg">
                 </div>
                 <div class="video-details">
 
                     <div class="author">
-                        <img src="yt_clone_images/profile_5.jpg">
+                        <img src="profile_5.jpg">
                     </div>
                     <div class="title">
                         <h3>
@@ -434,12 +434,12 @@
              <div class="video">
                 <div class="video-thumbnail">
 
-                    <img src="yt_clone_images/video_thumb_1.jpg">
+                    <img src="video_thumb_1.jpg">
                 </div>
                 <div class="video-details">
 
                     <div class="author">
-                        <img src="yt_clone_images/profile_5.jpg">
+                        <img src="profile_5.jpg">
                     </div>
                     <div class="title">
                         <h3>
@@ -454,12 +454,12 @@
              <div class="video">
                 <div class="video-thumbnail">
 
-                    <img src="yt_clone_images/video_thumb_1.jpg">
+                    <img src="video_thumb_1.jpg">
                 </div>
                 <div class="video-details">
 
                     <div class="author">
-                        <img src="yt_clone_images/profile_5.jpg">
+                        <img src="profile_5.jpg">
                     </div>
                     <div class="title">
                         <h3>
@@ -474,12 +474,12 @@
              <div class="video">
                 <div class="video-thumbnail">
 
-                    <img src="yt_clone_images/video_thumb_1.jpg">
+                    <img src="video_thumb_1.jpg">
                 </div>
                 <div class="video-details">
 
                     <div class="author">
-                        <img src="yt_clone_images/profile_5.jpg">
+                        <img src="profile_5.jpg">
                     </div>
                     <div class="title">
                         <h3>
@@ -494,12 +494,12 @@
              <div class="video">
                 <div class="video-thumbnail">
 
-                    <img src="yt_clone_images/video_thumb_1.jpg">
+                    <img src="video_thumb_1.jpg">
                 </div>
                 <div class="video-details">
 
                     <div class="author">
-                        <img src="yt_clone_images/profile_5.jpg">
+                        <img src="profile_5.jpg">
                     </div>
                     <div class="title">
                         <h3>
@@ -514,12 +514,12 @@
              <div class="video">
                 <div class="video-thumbnail">
 
-                    <img src="yt_clone_images/video_thumb_1.jpg">
+                    <img src="video_thumb_1.jpg">
                 </div>
                 <div class="video-details">
 
                     <div class="author">
-                        <img src="yt_clone_images/profile_5.jpg">
+                        <img src="profile_5.jpg">
                     </div>
                     <div class="title">
                         <h3>
@@ -534,12 +534,12 @@
              <div class="video">
                 <div class="video-thumbnail">
 
-                    <img src="yt_clone_images/video_thumb_1.jpg">
+                    <img src="video_thumb_1.jpg">
                 </div>
                 <div class="video-details">
 
                     <div class="author">
-                        <img src="yt_clone_images/profile_5.jpg">
+                        <img src="profile_5.jpg">
                     </div>
                     <div class="title">
                         <h3>
@@ -554,12 +554,12 @@
              <div class="video">
                 <div class="video-thumbnail">
 
-                    <img src="yt_clone_images/video_thumb_1.jpg">
+                    <img src="video_thumb_1.jpg">
                 </div>
                 <div class="video-details">
 
                     <div class="author">
-                        <img src="yt_clone_images/profile_5.jpg">
+                        <img src="profile_5.jpg">
                     </div>
                     <div class="title">
                         <h3>
@@ -574,12 +574,12 @@
              <div class="video">
                 <div class="video-thumbnail">
 
-                    <img src="yt_clone_images/video_thumb_1.jpg">
+                    <img src="video_thumb_1.jpg">
                 </div>
                 <div class="video-details">
 
                     <div class="author">
-                        <img src="yt_clone_images/profile_5.jpg">
+                        <img src="profile_5.jpg">
                     </div>
                     <div class="title">
                         <h3>
